bdr.BDR.scala.error
Compilation error:
BDR:3: error: '(' expected but identifier found.
  if litMessage()=="R"{
     ^BDR:7: error: '(' expected but identifier found.
  if litMessage()=="L"{
     ^BDR:11: error: '(' expected but identifier found.
  if litMessage()=="I"{
     ^BDR:16: error: '(' expected but identifier found.
  if litMessage()=="A"{
     ^BDR:19: error: '(' expected but identifier found.
  if litMessage()=="B"{
     ^BDR:23: error: '(' expected but identifier found.
  if litMessage()=="C"{
     ^BDR:28: error: '(' expected but identifier found.
  if litMessage()=="Z"{
     ^BDR:31: error: '(' expected but identifier found.
  if litMessage()=="Y"{
     ^BDR:35: error: '(' expected but identifier found.
   if litMessage()=="X"{
      ^BDR:44: error: illegal start of simple expression
} 
^